--- a/PFE/latex/chap6.tex
+++ b/PFE/latex/chap6.tex
@@ -81,7 +81,7 @@ After training the dual-output-U-Net model we did a benchmark on the 13 images t
 \subsection{White Blood Cells}
 \hspace{\parindent}
 The White Blood Cells are also difficult to detect because of the non stable shape and in some cases they overlap, in this experiment we are comparing single output U-Net from \textsuperscript{\cite{10.1007/978-3-030-44584-3_31}} and the single output SegNet model.
-In the UNet we removed the edge output because we don't have the edge annotation. then trained the model for 15 epochs with the binaryCrossEntropy Loss function on (74 + 34) images. 
+In the U-Net we removed the edge output because we don't have the edge annotation. then trained the model for 15 epochs with the binaryCrossEntropy Loss function on (74 + 34) images. 
 We ended up with a very high accuracy and IOU score as we can see in table \ref{table:unet-wbc-training}.
 
 \input{tables/UNet-WBC-Training.tex}
@@ -94,7 +94,7 @@ The real count of the 108 images is calculated manually because the original dat
 \subsection{platelets}
 \hspace{\parindent}
 The platelets are easy to count because of the rare overlapping but they are a bit difficult to segment because of their small size.\\
-In this experiment we are testing single output U-Net from \textsuperscript{\cite{10.1007/978-3-030-44584-3_31}}. In the UNet we removed the edge output because we don’t have the edge annotation.
+In this experiment we are testing single output U-Net from \textsuperscript{\cite{10.1007/978-3-030-44584-3_31}}. In the U-Net we removed the edge output because we don’t have the edge annotation.
 then trained the model for 50 epochs with the BinaryCrossEntropy Loss function on (74 + 34) images.
 We ended up with a very high accuracy and IOU score as we can see in table \ref{table:PLT_DOUNET_TRAIN}.
 
