--- a/PFE/latex/chap1.tex
+++ b/PFE/latex/chap1.tex
@@ -25,7 +25,7 @@ A blood cell, also called a hematopoietic cell, hemocyte, or hematocyte, is a ce
 \begin{figure}[h]
 \centering
   \vspace{-0.2in}
-    \centerline{\includegraphics[width = 2.5in]{../images/BloodCells.jpg}}
+    \centerline{\includegraphics[width = 2.2in]{../images/BloodCells.jpg}}
     \caption{Blood Cell Types}
     \label{fig:bloodCellTypes}
 \end{figure}
@@ -35,7 +35,7 @@ That said, there are three main types of blood cells:
 \subsection{Red blood cells}
 \hspace{\parindent}
 Red blood cells (RBCs) are the cells which carry fresh oxygen all over the human body. This is vital to our health. They are round with a flattish, indented center, like doughnuts without a hole. 
-The hemoglobin is the protein found inside the red blood cell, and it's main purpose is carrying oxygen.\\
+The hemoglobin is the protein found inside the red blood cell, and it's main purpose is carrying oxygen.\
 
 Most people don't think about their red blood cells unless they have a disease that affects these cells. Problems with red blood cells can be caused by illnesses or a lack of iron or vitamins. Some diseases of the red blood cells are inherited.
 
@@ -66,7 +66,7 @@ White blood cells are divided into five types:
 \begin{figure}[H]
 \centering
   \vspace{-0.1in}
-    \centerline{\fbox{\includegraphics[width = 2.5in]{../images/white_blood_cells.jpg}}}
+    \centerline{\fbox{\includegraphics[width = 2.2in]{../images/white_blood_cells.jpg}}}
     \caption{The five types of White blood cells}
 \end{figure}
 
