updated chapter 1 conclusion!

--- a/PFE/latex/chap1.tex
+++ b/PFE/latex/chap1.tex
@@ -129,4 +129,5 @@ These are some of the health problems that can be identified by a CBC:
 
 \section{Conclusion}
 \hspace{\parindent}
+In this chapter, we presented a medical background of blood cells, and the benefits of a Complete Blood Count CBC.
 We conclude that there are many diseases related to blood cells, and we must aid in detecting some of them before it is too late.
