--- a/PFE/latex/chap2.tex
+++ b/PFE/latex/chap2.tex
@@ -334,14 +334,10 @@ Using this approach to segment blood cell images in the testing set, it can achi
 
 \input{tables/table1.tex}
 
-
 \section{Conclusion}
 \vspace{0.1in}
-\hspace*{0.16in}
 \hspace{\parindent}
-First in this chapter, we explored all the available datasets and their annotations.
-
-Later, we saw the diversity of state of the art methods where most approaches have used deep learning as a segmentation method paired with multiple image processing methods for counting blood cells.
+First in this chapter, we explored all the available datasets and their annotations. Later, we saw the diversity of state of the art methods where most approaches have used deep learning as a segmentation method paired with multiple image processing methods for counting blood cells.
 
 %we decided to work with the updated ALL-IDB1 dataset which has 13 RBC edges and masks, 108 WBC, Platelets Masks and 13 RBC images which has the count information, but the WBC and Platelets donthave the count information where we had to use manual count and algorithms to find the count information for these images.
 
