--- a/PFE/latex/chap1.tex
+++ b/PFE/latex/chap1.tex
@@ -369,10 +369,12 @@ SegNet is a semantic segmentation model designed in 2017. This core trainable se
 
 \begin{figure}[h]
 \centering
-  \vspace{-0.1in}
+  \vspace{0.2in}
     \centerline{\includegraphics[width = 4in]{../images/segnet.png}}
     \caption{SegNet architecture}
 \end{figure}
+
+\newpage
 
 \section{Image Processing Methods}
 \subsection{Watershed}
@@ -384,13 +386,13 @@ In watershed segmentation an image is regarded as a topographic landscape with r
 \centering
 \begin{minipage}{.33\textwidth}
   \centering
-  \centerline{\includegraphics[width = 2in]{../images/watershed_example.jpg}}
+  \centerline{\includegraphics[width = 1.8in]{../images/watershed_example.jpg}}
     \subcaption{example Image}
 \end{minipage}
 
 \begin{minipage}{.33\textwidth}
   \centering
-  \centerline{\includegraphics[width = 2in]{../images/watershed_relief.png}}
+  \centerline{\includegraphics[width = 1.8in]{../images/watershed_relief.png}}
     \subcaption{watershed reliefs}
 \end{minipage}
   \caption{Watershed algorithm from \textsuperscript{\cite{Steve_Eddins_2022_mathworks}}}
