--- a/PFE/latex/chap2.tex
+++ b/PFE/latex/chap2.tex
@@ -35,7 +35,7 @@ The ALL-IDB1 can be used for segmentation or classification with image processin
 
 \begin{figure}[H]
 \centering
-\includegraphics[width = 5in, height = 3in]{../images/ALLIDB1.jpg}
+\includegraphics[width=5.8in]{../images/ALLIDB1.jpg}
 \caption{Examples of the images contained in ALL-IDB1: healthy cells from non-ALL patients (a,b,c), probable lymphoblasts from ALL patients (d,e,f). }
 \end{figure}
 
@@ -44,7 +44,7 @@ The ALL-IDB1 can be used for segmentation or classification with image processin
 \begin{figure}[H]
 \begin{minipage}[b]{0.35\linewidth}
 \centering
-\includegraphics{../images/Im006_1.jpg}
+\includegraphics[width=55mm]{../images/Im006_1.jpg}
 \subcaption{Im006\_1.jpg}
 \label{fig:Im006.jpg}
 \end{minipage}
@@ -58,7 +58,7 @@ The ALL-IDB1 can be used for segmentation or classification with image processin
 
 \begin{minipage}[b]{0.35\linewidth}
 \centering
-\includegraphics[width=57mm]{../images/Im033_1.jpg}
+\includegraphics[width=55mm]{../images/Im033_1.jpg}
 \subcaption{Im033\_1.jpg}
 \label{fig:Im033.jpg}
 \end{minipage}
@@ -80,7 +80,7 @@ If we plot the coordinates in the Img006\_1.xyc (figure \ref{fig:Im006.jpg}) fil
 
 \begin{figure}[H]
 \centering
-    \fbox{\includegraphics[width = 5in, height = 4in]{../images/img006.xyc.jpg}}
+    \fbox{\includegraphics[width = 4in]{../images/img006.xyc.jpg}}
 \caption{coordinates from Img006\_1.xyc plotted on Img006\_1.jpg}
 \label{fig:Im006.xyc.jpg}
 \end{figure}
@@ -113,7 +113,7 @@ In this case, the ground truth consists of the number of cells (or other objects
 \begin{figure}[H]
 \begin{minipage}[c]{\linewidth}
 \centering
-\includegraphics[width = 2.5in, height = 1.8in]{../images/AS_09125_050118150001_A03f05d0.jpg}
+\includegraphics[width = 2.2in]{../images/AS_09125_050118150001_A03f05d0.jpg}
 \subcaption{AS\_09125\_050118150001\_A03f05d0.jpg}
 \label{fig:BBBC1}
 \end{minipage}
@@ -136,14 +136,14 @@ In this case, a human produces a binary (black and white but in some cases thy u
 \begin{figure}[H]
 \begin{minipage}[c]{0.4\linewidth}
 \centering
-\includegraphics[width=70mm]{../images/BBBC4-1.jpg}
+\includegraphics[width=50mm]{../images/BBBC4-1.jpg}
 \subcaption{2Gray1.tif (image)}
 \label{fig:BBBC004_img}
 \end{minipage}
 \hfill
 \begin{minipage}[c]{0.4\linewidth}
 \centering
-\includegraphics[width=70mm]{../images/BBBC4-1-F.jpg}
+\includegraphics[width=50mm]{../images/BBBC4-1-F.jpg}
 \subcaption{1.tif (mask)}
 \label{fig:BBBC004_F}
 \end{minipage}
@@ -157,14 +157,14 @@ In this case, a human outlines each cell in the image in order to indicate which
 \begin{figure}[H]
 \begin{minipage}[c]{0.4\linewidth}
 \centering
-\includegraphics[width=70mm]{../images/48hr-001-DIC.jpg}
+\includegraphics[width=50mm]{../images/48hr-001-DIC.jpg}
 \subcaption{48hr-001-DIC.jpg (image)}
 \label{fig:BBBC009_img}
 \end{minipage}
 \hfill
 \begin{minipage}[c]{0.4\linewidth}
 \centering
-\includegraphics[width=70mm]{../images/48hr-001-DIC_.jpg}
+\includegraphics[width=50mm]{../images/48hr-001-DIC_.jpg}
 \subcaption{48hr-001-DIC.jpg (edge mask)}
 \label{fig:BBBC009_O}
 \end{minipage}
@@ -253,7 +253,7 @@ In this project, the Faster R-CNN algorithm from keras-frcnn for Object Detectio
 
 \begin{figure}[H]
 \centering
-    \fbox{\includegraphics[width = 4.2in, height = 3.5in]{../images/BBCD1.jpg}}
+    \fbox{\includegraphics[width=4.2in]{../images/BBCD1.jpg}}
 \caption{Sample data from BBCD}
 \label{fig:BBCD1}
 \end{figure}
