--- a/PFE/latex/main.tex
+++ b/PFE/latex/main.tex
@@ -139,7 +139,7 @@
    \renewcommand{\footrulewidth}{0pt}%
    \fancyhead{}
    \fancyfoot{}
-   \fancyfoot[C]{\vspace{-0.38in} \large{\thepage}\hspace{0.07in}\large{|}\hspace{0.07in}\large{\pageref{LastPage}}}
+   \fancyfoot[C]{\vspace{0.38in} \large{\thepage}\hspace{0.07in}\large{|}\hspace{0.07in}\large{\pageref{LastPage}}}
 }%
 \pagestyle{empty}
 
@@ -241,6 +241,8 @@
 \setlength{\parindent}{24pt}
 
 \newpage
+
+\newgeometry{left=3cm,right=2.5cm,top=2.5cm,bottom=2.5cm}
 
 \input{introduction.tex}
 
