--- a/PFE/latex/titlepage.tex
+++ b/PFE/latex/titlepage.tex
@@ -53,7 +53,7 @@
 
     \hspace{0.2in}
     \large{\textbf{Spécialité \, :}  Technologie de l'information / }\\
-    .\hspace{1.55in}\large{Ingénierie du Logiciel et Traitement de l'Information}
+    \hspace*{1.6in}\large{Ingénierie du Logiciel et Traitement de l'Information}
 
     \begin{center}
         \begin{large}
