upadted .bib file!

--- a/PFE/latex/main.bib
+++ b/PFE/latex/main.bib
@@ -19,7 +19,9 @@ isbn="978-3-030-44584-3"
 	title	={JiangxiTecom Biochemistry Equipment Co., Ltd., Hematology Analyzers Biochemistry Analyzers Reagents},
 	year	={2022},
 	url	={https://en.tecom-cn.com/}
-	}@article{DBLP:journals/corr/abs-1802-10548,
+	}
+
+@article{DBLP:journals/corr/abs-1802-10548,
   author    = {Carlos X. Hern{\'{a}}ndez and
                Mohammad M. Sultan and
                Vijay S. Pande},
@@ -53,6 +55,7 @@ title	 = {Supervised and Unsupervised learning - GeeksforGeeks},
 year	 = {2022},
 url	   = {https://www.geeksforgeeks.org/supervised-unsupervised-learning/}
 }
+
 @article{Annie_Stuart_What_2022_webmd,
 	author	={Annie Stuart What},
 	title	={Acute Lymphoblastic Leukemia (ALL): Symptoms, Diagnosis, Treatment, Prognosis, and Survival Rate},
@@ -116,7 +119,9 @@ url	   = {https://www.mayoclinic.org/tests-procedures/complete-blood-count/about
   booktitle={Proceedings of the IEEE conference on Computer Vision and Pattern Recognition},
   pages={2487--2496},
   year={2016}
-}@article{circle-hough-transform,
+}
+
+@article{circle-hough-transform,
 author 	= {Wikipedia},
 title 	= {Circle Hough Transform - Wikipedia},
 year 		= {2022},
@@ -128,7 +133,9 @@ url			= {https://en.wikipedia.org/wiki/Circle_Hough_Transform}
 	title	={What are Convolutional Neural Networks? | IBM},
 	year	={2020},
 	url	={https://www.ibm.com/cloud/learn/convolutional-neural-networks}
-	}@article{DG-ml-cheatsheet,
+	}
+
+@article{DG-ml-cheatsheet,
 author = {ml-cheatsheet},
 title	 = {Gradient Descent — ML Glossary documentation},
 year	 = {2022},
@@ -163,6 +170,7 @@ year 			= {2000}
   doi={10.1109/TSMC.1983.6313076},
   ISSN={2168-2909},
   month={Sep.},}
+
 @article{guiliang2016microscopic,
   title={Microscopic Cell Image Segmentation and Counting Algorithm Based on Image Definition.},
   author={Guiliang, FENG and Yiping, LU and Wei, PENG},
@@ -344,7 +352,9 @@ abstract = {Yeast fluorescence microscopic images are widely used to observe the
 	title	={U-Net Explained | Papers With Code},
 	year	={2022},
 	url	={https://paperswithcode.com/method/u-net}
-}@article{patil2014blood,
+}
+
+@article{patil2014blood,
   title={BLOOD CELL ANALYSIS USING IMAGE SEGMENTATION AND COUNTING},
   author={Patil, Shivani and Nikam, Vidya and Patil, Rajeshwari},
   journal={International Journal},
