--- a/PFE/latex/main.tex
+++ b/PFE/latex/main.tex
@@ -73,7 +73,7 @@
 \renewcommand\bibname{References}
 
 % Bibliography styling
-\bibliographystyle{plain}
+\bibliographystyle{acm}
 
 % Redifining from 1.1 to 1.a ... 1.b ... and so on
 %\renewcommand{\thesubsection}{\alph{subsection}}
@@ -269,5 +269,9 @@
 \newpage
 
 \bibliography{main}
+\clearpage somebabble
+
+asda oasdas
+
 
 \end{document}
