updated chap3 intro and conclusion

--- a/PFE/latex/chap3.tex
+++ b/PFE/latex/chap3.tex
@@ -17,10 +17,10 @@
 \vspace{0.2in}
 \hspace{\parindent}
 As part of our research, we have treated the case of segmenting and counting Red, White blood cells and platelets which also known as CBC (Complete Blood Count), we are using the ALL-IDB\textsuperscript{\cite{pm77-2n23-20}} Dataset to train and evaluate our models.
-In our case study, and from multiple articles, we can see that U-Net and Segnet models are dominating the field of cell segmentation and Medical Computer vision in general.
+In our case study, and from multiple articles, we can see that U-Net and Segnet models are dominating the field of cell segmentation and Medical Computer vision in general. we've chosen the article of Overton \textsuperscript{\cite{10.1007/978-3-030-44584-3_31}} because of the performance and optimisation of their segmentation model and we applied the same idea on the SegNet model, and for the counting methods we took the 3 of the most used methods to compare between them.
 
 In this chapter, we test-out both U-Net and Segnet models, and analyse the results by comparing results of the two architectures.
-We will also explore different machine learning algorithms for both preprocessing and postprocessing.
+We will also explore different machine learning algorithms for both pre-processing and post-processing.
 
 \section{Proposed approach}
 \vspace{0.2in}
