Fixed bibtex entries by Aghiles

--- a/PFE/latex/main.tex
+++ b/PFE/latex/main.tex
@@ -190,7 +190,7 @@
   }
   {\end{list}}
 
-\usepackage{tikz}
+% \usepackage{tikz}
 \usetikzlibrary{calc}
 
 \usepackage{fullwidth}
@@ -269,9 +269,7 @@
 \newpage
 
 \bibliography{main}
-\clearpage somebabble
 
-asda oasdas
-
+\newpage
 
 \end{document}
