updated image names

--- a/PFE/latex/chap4.tex
+++ b/PFE/latex/chap4.tex
@@ -203,7 +203,6 @@ Here is the resulting output of each model on Im037.jpg (see figure \ref{fig:ori
   \subcaption{Output UNet edge}
 \end{minipage}
   \caption{Output from SegNet and UNet segmenting Red Blood Cells}
-  \label{fig:cht_output}
 \end{figure}
 
 \begin{figure}[H]
@@ -218,8 +217,7 @@ Here is the resulting output of each model on Im037.jpg (see figure \ref{fig:ori
   \fbox{\includegraphics[width = 3in]{../images/wbc_mask_unet.png}}
   \subcaption{Output white blood cells mask from UNet}
 \end{minipage}
-  \caption{Outputs from SegNet segmenting White Blood Cells}
-  \label{fig:cht_output}
+  \caption{Outputs from SegNet and UNet segmenting White Blood Cells}
 \end{figure}
 
 \begin{figure}[H]
@@ -235,7 +233,6 @@ Here is the resulting output of each model on Im037.jpg (see figure \ref{fig:ori
   \subcaption{Output mask of platelets with UNet}
 \end{minipage}
   \caption{Outputs from SegNet and UNet segmenting platelets}
-  \label{fig:cht_output}
 \end{figure}
 
 After all the steps we have mentioned above, the final output of each counting algorithm is presented in the figures below:
