--- a/PFE/latex/chap4.tex
+++ b/PFE/latex/chap4.tex
@@ -189,7 +189,7 @@ Here is the resulting output of each model on Im037.jpg (see figure \ref{fig:ori
 \begin{minipage}{.5\textwidth}
   \centering
   \fbox{\includegraphics[width = 3in]{../images/rbc_mask_unet.png}}
-  \subcaption{Output UNet mask}
+  \subcaption{Output DO-UNet mask}
 \end{minipage}
 
 \begin{minipage}{.5\textwidth}
@@ -200,7 +200,7 @@ Here is the resulting output of each model on Im037.jpg (see figure \ref{fig:ori
 \begin{minipage}{.5\textwidth}
   \centering
   \fbox{\includegraphics[width = 3in]{../images/rbc_edge_unet.png}}
-  \subcaption{Output UNet edge}
+  \subcaption{Output DO-UNet edge}
 \end{minipage}
   \caption{Output from SegNet and UNet segmenting Red Blood Cells}
 \end{figure}
