--- a/PFE/latex/chap4.tex
+++ b/PFE/latex/chap4.tex
@@ -202,7 +202,7 @@ Here is the resulting output of each model on Im037.jpg (see figure \ref{fig:ori
   \fbox{\includegraphics[width = 3in]{../images/rbc_edge_unet.png}}
   \subcaption{Output DO-UNet edge}
 \end{minipage}
-  \caption{Output from SegNet and UNet segmenting Red Blood Cells}
+  \caption{Output from SegNet and DO-UNet segmenting Red Blood Cells}
 \end{figure}
 
 \begin{figure}[H]
