fixed typo dedication

--- a/PFE/latex/dedication.tex
+++ b/PFE/latex/dedication.tex
@@ -18,7 +18,7 @@
     \textbf{\large{To all my dear friends and my partner Aghiles,}}\\
     \large{For their help and support.}\\
     \textbf{\large{To my professor Touazi and Yagoubi.}}\\
-    \large{For providing all their help needed.}\\
+    \large{For providing all their support.}\\
     \hfill\textbf{\Large{Neggazi Mohamed Lamine}}
 
     \vspace{0.18in}
@@ -26,12 +26,12 @@
     \Large{\underline{I dedicate this work to:}}\\          \textbf{\large{To my dear mother Malika,}}\\\vspace{-0.1in}
     \textbf{\large{And to my dear father Mohammed,}}\\
     \large{Who have stood by me every step of the way\\\vspace{-0.1in}And motivated me to achieve many goals.}\\
-    \textbf{\large{To my dear sisters Imene and Feriel and my brother sofiane}}\\
+    \textbf{\large{To my dear sisters Imene and Feriel and my brother Sofiane}}\\
     \large{For her advices throughout my journey.}\\
     \textbf{\large{To all my dear friends Meriem and my partner Amine,}}\\
     \large{For their help and support.}\\
     \textbf{\large{To my professor Touazi and Yagoubi.}}\\
-    \large{For providing all their help needed.}\\
+    \large{For providing all their support.}\\
     \hfill\textbf{\Large{Gharbi Aghiles}}
 
 \end{center}
