updated resume and abstract keywords!

--- a/PFE/latex/abstract.tex
+++ b/PFE/latex/abstract.tex
@@ -19,6 +19,6 @@ Cell counting is a tedious task that would benefit greatly from automation. Accu
 \vspace{1in}
 
 \begin{changemargin}{0.9cm}{0.9cm}
-\hspace{-\parindent}
-Keywords: CNN, cell segmentation, cell counting, convolutional neural networks
+\hspace{-21pt}
+Keywords: CNN, Cell segmentation, Cell counting, Convolutional Neural Networks.
 \end{changemargin}
