--- a/PFE/latex/resume.tex
+++ b/PFE/latex/resume.tex
@@ -19,6 +19,6 @@ Le comptage de cellules est une tâche fastidieuse qui bénéficierait grandemen
 \vspace{1in}
 
 \begin{changemargin}{0.9cm}{0.9cm}
-\hspace{-\parindent}
-Mots clés : CNN, Comptage des cellules, segmentation d'image
+\hspace{-21pt}
+Mots clés : CNN, Segmentation des cellules, Comptage des cellules, Réseau de Neurones Convolutionnels.
 \end{changemargin}
