fixed typo duplicate list of tables

--- a/PFE/latex/main.tex
+++ b/PFE/latex/main.tex
@@ -221,12 +221,12 @@
 
 \newpage
 
-\cftaddtitleline{toc}{part}{\vspace{-0.12in}\color{Black}{Contents}}{}
+\cftaddtitleline{toc}{part}{\vspace{-0.12in}\color{Black}{Table Of Contents}}{}
 \tableofcontents
 
 \newpage
 
-\cftaddtitleline{toc}{part}{\vspace{-0.12in}\color{Black}{\listtablename}}{}
+\cftaddtitleline{toc}{part}{\vspace{-0.12in}\color{Black}{\listfigurename}}{}
 \listoffigures
 
 \newpage
