--- a/PFE/latex/main.tex
+++ b/PFE/latex/main.tex
@@ -33,6 +33,9 @@
 \hyphenpenalty=10000
 \hbadness=10000
 
+% table border width
+\setlength\arrayrulewidth{0.7pt}
+
 % Replace table caption name
 \usepackage{caption}
 % \captionsetup[table]{name=Table}
