--- a/PFE/latex/tables/table2.tex
+++ b/PFE/latex/tables/table2.tex
@@ -10,9 +10,9 @@
   \cellcolor[HTML]{FFFFFF}\textbf{Description} \\ \hline
 \cellcolor[HTML]{FFFFFF}ALL-IDB \textsuperscript{\cite{pm77-2n23-20}}&
   \cellcolor[HTML]{FFFFFF}108 &
-  \multicolumn{1}{c|}{} &
-  \multicolumn{1}{c|}{X} &
-   &
+  \multicolumn{1}{c|}{108 masks / 13 edges} &
+  \multicolumn{1}{c|}{108 masks} &
+  108 masks&
   \cellcolor[HTML]{FFFFFF}\begin{tabular}[c]{@{}c@{}}Location \\ (Centroid of cells)\end{tabular} &
   \cellcolor[HTML]{FFFFFF}\begin{tabular}[c]{@{}c@{}}Acute Lymphoblastic\\ Leukemia Image Database\\ for Image Processing\end{tabular} \\ \hline
 \cellcolor[HTML]{FFFFFF}BBBC \textsuperscript{\cite{ljosa2012annotated}} &
