fixed all-idb1 instead of all-idb and added comparison table of all-idb

--- a/PFE/latex/chap2.tex
+++ b/PFE/latex/chap2.tex
@@ -99,6 +99,10 @@ This dataset has been created for testing the performances of classification sys
 
 The annotation of ALL-IDB2 is similar to the ALL-IDB1 but with no centroid coordinates. The ALL-IDB2 image files are named with the notation ImXXX\_Y.jpg where XXX is a progressive 3-digit integer and Y is a Boolean digit equal to 0 if the cell placed in the center of the image is not a blast cell, and equal to 1 if the cell placed in the center of the image is a blast cell. all images labeled with Y=0 are from for healthy individuals, and all images labeled with Y=1 are from ALL patients. 
 
+\vspace{0.2in}
+
+\input{tables/allidb.tex}
+
 \subsection{Broad Bio-image Benchmark Collection}
 \hspace{\parindent}
 The Broad Bio-image Benchmark Collection (BBBC) is a collection of freely downloadable microscopy image sets, cited in 450+ studies. In addition to the images themselves, each set includes a description of the biological application and some type of "ground truth" (expected results) \textsuperscript{\cite{ljosa2012annotated}}. The BBBC is organized by the Broad Institute's Imaging Platform.\
