--- a/PFE/latex/tables/table2.tex
+++ b/PFE/latex/tables/table2.tex
@@ -8,7 +8,7 @@
   \multicolumn{3}{c|}{\textbf{\begin{tabular}[c]{@{}c@{}}Type of cells\\ (RBC, WBC, Platelets)\end{tabular}}} &
   \cellcolor[HTML]{FFFFFF}\textbf{Type of annotation} &
   \cellcolor[HTML]{FFFFFF}\textbf{Description} \\ \hline
-\cellcolor[HTML]{FFFFFF}ALL-IDB \textsuperscript{\cite{pm77-2n23-20}}&
+\cellcolor[HTML]{FFFFFF}ALL-IDB1 \textsuperscript{\cite{pm77-2n23-20}}&
   \cellcolor[HTML]{FFFFFF}108 &
   \multicolumn{1}{c|}{108 masks / 13 edges} &
   \multicolumn{1}{c|}{108 masks} &
